name:                server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable server
  main-is:             Server.hs

  other-modules:       Server.Database
                     , Server.Types

  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , http-media >= 0.6 && < 0.7
                     , servant >= 0.9 && < 0.10
                     , servant-server >= 0.9 && < 0.10
                     , sqlite-simple >= 0.4 && < 0.5
                     , text
                     , th-printf >= 0.3 && < 0.4
                     , warp >= 3.2 && < 3.3
                     , unix

  default-language:    Haskell2010

  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded
